[package]
name = "crosscan"
version = "0.1.1"
edition = "2024"

[features]
default = []

[target.'cfg(target_os = "linux")'.dependencies]
socketcan = { version = "3.5", features = ["tokio"] }

[dependencies]
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
